@@ -63,6 +63,13 @@ Documentation
   moved to the GitHub wiki section of this repository; the main entry
   page is https://github.com/coq/coq/wiki/The-Coq-FAQ.
 
+Tools
+
+- A new coqtop option -quick-light and the corresponding Makefile target
+  quick-light that behaves as -quick except that the data necessary to rebuild
+  the proofs is not stored on disk. This generates way smaller object files, but
+  prevents compiling them to a vo file later.
+
 Changes from 8.7.0 to 8.7.1
 ===========================
 
